--- a/module-services/paymentservices/templates/dashboard.html
+++ b/module-services/paymentservices/templates/dashboard.html
@@ -371,7 +371,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/naswa_logo.png" alt="NASWA Logo" class="logo-icon">
+                <img src="./naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>Payment Services | OUIL v2.0</h1>
                     <p>Unemployment Benefit Payment Processing System</p>
