--- a/module-services/tax-services/templates/base.html
+++ b/module-services/tax-services/templates/base.html
@@ -370,11 +370,13 @@
     <header>
         <div class="header-container">
             <div class="logo">
+                <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
-                    <h1>{% block header_title %}NASWA Tax Services{% endblock %}</h1>
-                    <p>{% block header_subtitle %}Unemployment Insurance Tax Administration{% endblock %}</p>
-                </div>
+                    <h1>NASWA Employer Services</h1>
+                    <p>Unemployment Claim Verification Portal</p>
+                </div>  
             </div>
+        </div>
             <nav>
                 <ul>
                     <li><a href="/" class="{% if request.endpoint == 'index' %}active{% endif %}">Dashboard</a></li>
