--- a/module-services/tax-services/templates/base.html
+++ b/module-services/tax-services/templates/base.html
@@ -372,8 +372,8 @@
             <div class="logo">
                 <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
-                    <h1>NASWA Employer Services</h1>
-                    <p>Unemployment Claim Verification Portal</p>
+                    <h1>NASWA Tax Services</h1>
+                    <p>Unemployment Claim Tax Services Portal</p>
                 </div>  
             </div>
         </div>
