--- a/module-services/EmployerServices/Pages/Dashboard.cshtml
+++ b/module-services/EmployerServices/Pages/Dashboard.cshtml
@@ -315,10 +315,10 @@
     <header>
         <div class="header-container">
                 <div class="logo">
-                <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
+                <img src="./naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Employer Services</h1>
-                    <p>Unemployment Claim Verification Portal</p>
+                    <p>Unemployment Claim Management Portal</p>
                 </div>
             </div>
         </div>
