--- a/module-services/tax-services/templates/base.html
+++ b/module-services/tax-services/templates/base.html
@@ -370,7 +370,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
+                <img src="./naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Tax Services</h1>
                     <p>Unemployment Claim Tax Services Portal</p>
