--- a/module-services/tax-services/templates/base.html
+++ b/module-services/tax-services/templates/base.html
@@ -370,13 +370,12 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="./naswa_logo.png" alt="NASWA Logo" class="logo-icon">
+                <img src="/static/naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Tax Services</h1>
                     <p>Unemployment Claim Tax Services Portal</p>
                 </div>  
             </div>
-        </div>
             <nav>
                 <ul>
                     <li><a href="/" class="{% if request.endpoint == 'index' %}active{% endif %}">Dashboard</a></li>
